Fix wrong font in form

--- a/app/assets/stylesheets/food.scss
+++ b/app/assets/stylesheets/food.scss
@@ -80,6 +80,7 @@ body.foods {
 
       font-size: 1rem;
       color: $color-blue-6;
+      font-family: inherit;
     }
 
     input::-webkit-outer-spin-button,
