--- a/app/assets/stylesheets/meal.scss
+++ b/app/assets/stylesheets/meal.scss
@@ -79,6 +79,7 @@ body.meals {
 
       font-size: 1rem;
       color: $color-blue-6;
+      font-family: inherit;
     }
 
     select {
